loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: Missing closing brace `}' assumed here
while (estFaceMur) {
^LoopWhile:3: error: 'while' expected but 'else' found.
else avance() 
^LoopWhile:5: error: '(' expected but '}' found.
	}
        ^