loopwhile.LoopWhile.scala.code
while (estFaceMur) {
    do rien;
else avance()